fixing create user details
